k8s/audio-reprompt-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audio-reprompt-api-deployment
  labels:
    app: audio-reprompt-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audio-reprompt-api
  template:
    metadata:
      labels:
        app: audio-reprompt-api
    spec:
      containers:
        - name: audio-reprompt-api
          image: ${AWS_REGISTRY}audio-reprompt-api:1.0.3
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: audio-reprompt-service
  labels:
    app: audio-reprompt-service
spec:
  type: NodePort
  selector:
    app: audio-reprompt-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30000
